deployments/garu-all-resources.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
      tier: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
    spec:
      containers:
      - image: mariadb:latest
        name: mariadb
        volumeMounts:
        - name: "mariadb-persistent-storage"
          mountPath: "/var/lib/mysql/"
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
    tier: backend
  name: mariadb-svc
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mariadb
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:php7.4-fpm
        name: wordpress
        ports:
        - containerPort: 9000
          name: php-fpm
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
    tier: frontend
  name: wordpress-svc
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      tier: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
        tier: frontend
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        volumeMounts:
        - name: "wordpress-persistent-storage"
          mountPath: "/var/www/html"
        - name: nginx-custom-conf
          mountPath: /etc/nginx/custom.conf.d/nginx-custom.conf
          subPath: nginx-custom.conf
          readOnly: true
        - name: wp-hardening
          mountPath: /etc/nginx/custom.conf.d/wp-hardening.conf
          subPath: wp-hardening.conf
          readOnly: true
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
        - name: wordpress-conf-tpl
          mountPath: /etc/nginx/templates/wordpress.conf.template
          subPath: wordpress.conf.template
          readOnly: true
      volumes:
      - name: nginx-custom-conf
        configMap:
          name: nginx-custom-conf
          items:
            - key: nginx-custom.conf
              path: nginx-custom.conf
      - name: wp-hardening
        configMap:
          name: wp-hardening
          items:
            - key: wp-hardening.conf
              path: wp-hardening.conf
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: wordpress-conf-tpl
        configMap:
          name: wordpress-conf-tpl
          items:
            - key: wordpress.conf.template
              path: wordpress.conf.template
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    tier: frontend
  name: nginx-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
    tier: frontend
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-wp-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - erpome.ga
    - argocd.erpome.ga
    secretName: erpomega-tls
  rules:
    - host: erpome.ga
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
    - host: argocd.erpome.ga
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service: 
                name: argocd-server
                port:
                  number: 80
---
